--- a/index.html
+++ b/index.html
@@ -26,8 +26,22 @@
               <p>212038, Belarus, Mogilev, Dimitrova ave, 68-20</p>
             </div>
             <div class="mobile-number">
-              <i class="fas fa-mobile-alt"></i>
+              <span class="icons">
+                <i class="fas fa-mobile-alt"></i>
+                <i class="fab fa-viber"></i>
+                <i class="fab fa-telegram"></i>
+              </span>
+
               <p>+375(29)744-82-67</p>
+            </div>
+            <div class="skype">
+              <i class="fab fa-skype"></i>
+              <p>jk_yafimenka</p>
+            </div>
+            <div class="linkedin">
+              <i class="fab fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/yauheni-yafimenka" target="_blank">linkedin.com/in/yauheni-yafimenka</a>
+
             </div>
             <div class="birthday">
               <i class="fas fa-birthday-cake"></i>
@@ -43,10 +57,14 @@
               <li>WebPack</li>
               <li>SCSS</li>
               <li>Bootstrap</li>
+              <li>jQuery</li>
               <li>Angular</li>
               <li>TypeScript</li>
               <li>Node.js</li>
               <li>MongoDB</li>
+              <li>Mongoose</li>
+              <li>Sequilize</li>
+              <li>SQL</li>
               <li>Git</li>
             </ul>
           </section>
@@ -59,6 +77,7 @@
         </aside>
         <section class="my-projects">
           <h2 class="title">My projects</h2>
+          <hr>
           <article>
             <h3 class="title">Fancy Weather</h3>
             <p class="details">Weather Forecast App. Based on Bootstrap4, JS, HTML5, CSS3 and WebPack</p>
@@ -82,6 +101,7 @@
         </section>
         <section class="certificates">
           <h2 class="title">My Certificates</h2>
+          <hr>
           <article>
             <p class="title">The Rolling Scopes School Front-End Course 2020 Q1</p>
             <a href="https://app.rs.school/certificate/wfz72567" target="_blank"><i class="fas fa-link"></i></a>
