fix: contacts order and git

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <img src="./assets/avatar.jpg" alt="Yauheni avatar" class="avatar__img">
           </section>
           <section class="contacts">
+            <div class="linkedin">
+              <i class="fab fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/yauheni-yafimenka" target="_blank">linkedin.com/in/yauheni-yafimenka</a>
+            </div>
             <div class="email">
               <i class="fas fa-envelope"></i>
               <p>yafimenka.jk@gmail.com</p>
-            </div>
-            <div class="location">
-              <i class="fas fa-map-marked-alt"></i>
-              <p>212038, Belarus, Mogilev, Dimitrova ave, 68-20</p>
             </div>
             <div class="mobile-number">
               <span class="icons">
@@ -31,17 +31,19 @@
                 <i class="fab fa-viber"></i>
                 <i class="fab fa-telegram"></i>
               </span>
-
               <p>+375(29)744-82-67</p>
             </div>
             <div class="skype">
               <i class="fab fa-skype"></i>
               <p>jk_yafimenka</p>
             </div>
-            <div class="linkedin">
-              <i class="fab fa-linkedin"></i>
-              <a href="https://www.linkedin.com/in/yauheni-yafimenka" target="_blank">linkedin.com/in/yauheni-yafimenka</a>
-
+            <div class="github">
+              <i class="fab fa-github"></i>
+              <a href="https://github.com/yafimchik" target="_blank">github.com/yafimchik</a>
+            </div>
+            <div class="location">
+              <i class="fas fa-map-marked-alt"></i>
+              <p>212038, Belarus, Mogilev, Dimitrova ave, 68-20</p>
             </div>
             <div class="birthday">
               <i class="fas fa-birthday-cake"></i>
